# elastic-logs-processing

./: README.md  pyproject.toml
elastic_logs_processing/: app.py
