[project]
name = "elastic-logs-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Murillo Augusto",email = "murillo@4property.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
