[project]
name = "elastic-logs-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "Murillo Augusto",email = "murillo@4property.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ruff (>=0.11.13,<0.12.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'
run = 'python elastic_logs_processing/app.py'
